--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.6.2"
+    "astro": "^4.6.2",
+    "astro-icon": "^1.1.0"
   }
 }
