--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -46,4 +46,4 @@ jobs:
           username: ${{ vars.FTP_USER }}
           password: ${{ secrets.FTP_PASSWORD }}
           server-dir: ${{ vars.FTP_PATH }}
-          local-dir: ./tmp
+          local-dir: tmp/
