Include submodule in deploy

--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -14,6 +14,9 @@ jobs:
     steps:
       - name: Get latest code
         uses: actions/checkout@v4
+        with:
+          submodules: true           # Fetch submodules
+          submodules-depth: 1         # Fetch only the latest commit
 
       - name: Install node dependencies
         run: |
