--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule ".frontmatter"]
-	path = .frontmatter
+[submodule "src/content"]
+	path = src/content
 	url = git@github.com:markusfinell/finell-dev-content.git
