--- a/package.json
+++ b/package.json
@@ -1,25 +1,14 @@
 {
-  "name": "finell",
+  "name": "test",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^5.1.2",
-    "astro": "^4.16.0",
-    "clean-css": "^5.3.2",
-    "concurrently": "^8.2.2",
-    "cssnano": "^6.0.1",
-    "postcss-cli": "^10.1.0",
-    "postcss-import": "^16.1.0",
-    "postcss-import-ext-glob": "^2.1.1",
-    "postcss-js": "^4.0.1",
-    "slugify": "^1.6.6",
-    "tailwindcss": "^3.4.13"
+    "astro": "^5.1.10"
   }
 }
